--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@eslint/js": "^9.24.0",
     "@eslint/json": "^0.11.0",
     "@eslint/markdown": "^6.3.0",
+    "@tailwindcss/postcss": "^4.1.10",
     "@types/jest": "^29.5.14",
+    "autoprefixer": "^10.4.21",
     "babel-jest": "^29.7.0",
     "css-loader": "^7.1.2",
     "eslint": "^9.24.0",
@@ -15,8 +17,11 @@
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
+    "postcss": "^8.5.5",
+    "postcss-loader": "^8.1.1",
     "prettier": "3.5.3",
     "style-loader": "^4.0.0",
+    "tailwindcss": "^4.1.10",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.0",
