--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@eslint/markdown": "^6.3.0",
     "@tailwindcss/postcss": "^4.1.10",
     "@types/jest": "^29.5.14",
-    "autoprefixer": "^10.4.21",
     "babel-jest": "^29.7.0",
     "css-loader": "^7.1.2",
     "eslint": "^9.24.0",
@@ -19,7 +18,8 @@
     "jest": "^29.7.0",
     "postcss": "^8.5.5",
     "postcss-loader": "^8.1.1",
-    "prettier": "3.5.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.12",
     "style-loader": "^4.0.0",
     "tailwindcss": "^4.1.10",
     "webpack": "^5.98.0",
