--- a/package.json
+++ b/package.json
@@ -15,6 +15,13 @@
     "globals": "^16.0.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.3",
+    "image-minimizer-webpack-plugin": "^4.1.3",
+    "imagemin": "^9.0.1",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-mozjpeg": "^10.0.0",
+    "imagemin-pngquant": "^10.0.0",
+    "imagemin-svgo": "^11.0.1",
+    "imagemin-webp": "^8.0.0",
     "jest": "^29.7.0",
     "postcss": "^8.5.5",
     "postcss-loader": "^8.1.1",
@@ -35,6 +42,7 @@
     "build": "webpack --config webpack.prod.js",
     "deploy": "git subtree push --prefix dist origin gh-pages",
     "test": "jest",
-    "watch": "jest --watch"
+    "watch": "jest --watch",
+    "format": "prettier --write ."
   }
 }
